--- a/src/views/assets/styles/global.css
+++ b/src/views/assets/styles/global.css
@@ -1,6 +1,6 @@
 :root {
     --blue-600: #2f55d4;
-    --primary: #009de1;
+    --blue-500: #009de1;
     --blue-300: #def5ff;
     --blue-100: #ebeffb;
 }
