--- a/src/views/assets/styles/global.css
+++ b/src/views/assets/styles/global.css
@@ -2,7 +2,7 @@
     --blue-700: #114f7f;
     --blue-600: #176aaa;
     --blue-500: #009de1;
-    --blue-300: #def5ff;
+    --blue-300: #DDE4F8;
     --blue-100: #ebeffb;
 }
 
@@ -17,7 +17,7 @@
     position: relative;
     margin: 0 auto;
     max-width: 1920px;
-    padding: 6rem;
+    padding: 3rem 6rem;
     color: #1a1a1e;
     background-color: #f6f8f9;
 }
