--- a/src/views/assets/styles/global.css
+++ b/src/views/assets/styles/global.css
@@ -21,3 +21,10 @@
     color: #1a1a1e;
     background-color: #f6f8f9;
 }
+
+.container {
+    margin: 0 auto;
+    max-width: 1920px;
+    display: flex;
+    justify-content: space-around;
+}
