--- a/src/views/assets/styles/form.css
+++ b/src/views/assets/styles/form.css
@@ -115,3 +115,12 @@ textarea {
     min-height: 80;
     width: 100%;
 }
+
+.checkbox-container {
+    font-size: 1rem;
+    font-weight: bold;
+    line-height: 1.1;
+    display: grid;
+    grid-template-columns: 1em auto;
+    gap: 0.5em;
+}
