feat: show inputs in cols format

--- a/src/views/assets/styles/form.css
+++ b/src/views/assets/styles/form.css
@@ -71,7 +71,8 @@ form hr {
 }
 
 .input-box {
-    margin-bottom: 1rem;
+    margin-bottom: 1.5rem;
+    flex: 1;
 }
 
 .text-input {
@@ -123,4 +124,9 @@ textarea {
     display: grid;
     grid-template-columns: 1em auto;
     gap: 0.5em;
+}
+
+.mult-inputs {
+    display: flex;
+    gap: 1rem;
 }
