--- a/src/views/assets/styles/button.css
+++ b/src/views/assets/styles/button.css
@@ -7,7 +7,6 @@
     font-weight: 600;
     font-size: 1rem;
     cursor: pointer;
-    border: 1px solid #1a1a1e;
 
     display: flex;
     align-items: center;
@@ -18,10 +17,10 @@
     text-decoration: none;
     flex: content;
     max-width: 250px;
+    max-height: 48px;
 }
 
 .button.button-primary {
-    border: none;
     color: #fff;
     background-color: var(--blue-500);
 }
@@ -31,6 +30,7 @@
 }
 
 .button.button-secondary {
+    box-sizing: border-box;
     background-color: transparent;
     border: 2px solid var(--blue-600);
     color: var(--blue-600);
