feat: add styled select

--- a/src/views/assets/styles/form.css
+++ b/src/views/assets/styles/form.css
@@ -85,7 +85,7 @@ form hr {
     display: flex;
     align-items: center;
     gap: 8px;
-    border: 1px solid #dee2e6;
+    border: 2px solid #dee2e6;
     border-radius: 8px;
     min-width: 250px;
     padding-left: 0.5rem;
@@ -143,4 +143,43 @@ textarea {
 .previous-step {
     position: relative;
     float: left;
+}
+
+.custom-select {
+    position: relative;
+    min-width: 350px;
+}
+
+.custom-select select {
+    appearance: none;
+    width: 100%;
+    font-size: 1.15rem;
+    padding: 0.5rem 1.25rem;
+    background-color: #fff;
+    border: 1px solid #dee2e6;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+.custom-select::before,
+.custom-select::after {
+    --size: 0.3rem;
+    position: absolute;
+    content: "";
+    right: 1rem;
+    pointer-events: none;
+}
+
+.custom-select::before {
+    border-left: var(--size) solid transparent;
+    border-right: var(--size) solid transparent;
+    border-bottom: var(--size) solid black;
+    top: 40%;
+}
+
+.custom-select::after {
+    border-left: var(--size) solid transparent;
+    border-right: var(--size) solid transparent;
+    border-top: var(--size) solid black;
+    top: 55%;
 }
