--- a/src/views/assets/styles/form.css
+++ b/src/views/assets/styles/form.css
@@ -60,6 +60,7 @@ form .form-body section#variations {
     padding: 2.5rem;
     border-radius: 8px;
     border: 2px solid #dee2e6;
+    margin: 0.5rem 0;
 }
 
 form h2 {
