--- a/src/views/assets/styles/form.css
+++ b/src/views/assets/styles/form.css
@@ -137,7 +137,8 @@ textarea {
 .text-input:focus-within,
 textarea:focus,
 .custom-select select:focus {
-    border-color: var(--blue-600) !important;
+    box-shadow: 0px 0px 6px 2px #bccbf9;
+    border-color: var(--blue-500) !important;
 }
 
 .checkbox-container {
