--- a/src/views/assets/styles/home.css
+++ b/src/views/assets/styles/home.css
@@ -1,7 +1,10 @@
 main {
-    display: flex;
     align-items: center;
-    min-height: 400px;
+    min-height: 85vh;
+    border-top-left-radius: 32px;
+    border-top-right-radius: 32px;
+    background: linear-gradient(273deg, rgba(0, 157, 225, 1) -27%, rgba(42, 192, 255, 1) 100%);
+    padding: 4rem;
 }
 
 main aside {
@@ -9,31 +12,37 @@ main aside {
 }
 
 main aside .presentation-text h2 {
+    color: var(--blue-100);
     font-size: 4rem;
     font-weight: 800;
 }
 
 main aside .presentation-text h2 span {
-    color: var(--blue-700);
+    color: #2d3962;
     margin-bottom: 1rem;
 }
 
 main aside .presentation-text h3 {
+    color: #3f3d56;
     font-size: 2.5rem;
     font-weight: 400;
+    margin: 1rem 0;
 }
 
 main aside .presentation-text p {
-    font-size: 1.5rem;
+    font-size: 1.875rem;
     font-weight: 300;
-    color: #717171;
+    color: #cee8ff;
     margin: 4rem 0;
 }
 
 main .presentation-container {
+    align-items: center;
+    display: flex;
+    justify-content: center;
     flex: 1;
 }
 
 main .presentation-container img {
-    width: 100%;
+    width: 95%;
 }
