refactor: change header style

--- a/src/views/assets/styles/global.css
+++ b/src/views/assets/styles/global.css
@@ -17,7 +17,7 @@
 
 .content {
     position: relative;
-    margin: 0 auto;
+    margin: 102px auto 0;
     max-width: 1920px;
     padding: 1rem 0rem;
     color: #1a1a1e;
