--- a/src/views/assets/styles/header.css
+++ b/src/views/assets/styles/header.css
@@ -2,7 +2,7 @@
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 9999;
+    z-index: 9998;
     background-color: #fbfbfb;
 }
 
@@ -14,7 +14,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 1.5rem 4rem;
+    padding: 1.5rem 3rem;
     color: #1a1a1e;
 }
 
@@ -62,4 +62,84 @@
 
 .header nav ul li a:hover::after {
     width: 100%;
+}
+
+.sidebar {
+    position: fixed;
+    z-index: 9999;
+    top: 0;
+    left: 0;
+    transform: translateX(-100%);
+    width: 300px;
+    height: 1000vh;
+    background-color: #fbfbfb;
+    box-shadow: 2px 0px 16px #21212185;
+    padding: 1rem;
+    transition: all .4s cubic-bezier(0.09, 0.25, 0.18, 0.97);
+}
+
+.sidebar.active {
+    transform: translateX(0);
+}
+
+.sidebar ul {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 0.25rem;
+}
+
+.sidebar ul li a {
+    display: flex;
+    align-items: center;
+    gap: 1.25rem;
+    padding: 1rem;
+    text-decoration: none;
+    font-size: 1.25rem;
+    color: #1a1a1e;
+    border-radius: 12px;
+}
+
+
+.sidebar ul li a:hover {
+    background-color: #ebeffb;
+}
+
+.open-sidebar {
+    display: none;
+}
+
+.close-sidebar {
+    display: block;
+    margin-left: auto;
+}
+
+.open-sidebar,
+.close-sidebar {
+    cursor: pointer;
+    height: 50px;
+    width: 50px;
+    padding: 0.6rem;
+    border-radius: 12px;
+    transition: all .2s ease;
+}
+
+.open-sidebar:hover,
+.close-sidebar:hover {
+    background: #ebeffb;
+}
+
+@media (max-width: 768px) {
+    .open-sidebar {
+        display: block;
+    }
+
+    .header nav {
+        display: none;
+    }
+
+    .header .container {
+        flex-direction: row-reverse;
+        padding: 1.5rem 2rem;
+    }
 }
