refactor: remove tap-highlight color

--- a/src/views/assets/styles/global.css
+++ b/src/views/assets/styles/global.css
@@ -30,3 +30,12 @@
     display: flex;
     justify-content: space-around;
 }
+
+input,
+textarea,
+button,
+select,
+svg,
+a {
+    -webkit-tap-highlight-color: transparent;
+}
